# FroncuJSON

./: CMakeLists.txt  README.md
cmake/: jsoncpp.cmake  nlohmannjson.cmake
include/FroncuJSON/: value.hpp
source/: value_jsoncpp.cpp  value_nlohmannjson.cpp
source/implementation/: value_implementation_jsoncpp.cpp  value_implementation_jsoncpp.hpp  value_implementation_nlohmannjson.cpp  value_implementation_nlohmannjson.hpp
